2007-08-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* solib-svr4.c (scan_dyntag): Only read target memory when necessary.
	Fix formatting.
	(elf_locate_base): Look for DT_MIPS_RLD_MAP first.  Expand comments.
	(elf_lookup_lib_symbol): Fix formatting.

2007-08-21  Michael Snyder  <msnyder@access-company.com>

	* dbxread.c (read_dbx_symtab): Guard null deref.
	Break up long line.

	* valops.c (find_overload_match): Guard against NULL.

2007-08-21  Daniel Jacobowitz  <dan@codesourcery.com>

	* MAINTAINERS (Patch Champions): Remove self.

2007-08-21  Chris Smith  <chris.smith@st.com>

	* cli/cli-script.c (read_command_lines): Call dont_repeat for each
	line.

2007-08-18  Michael Snyder  <msnyder@access-company.com>

	* stabsread.c (dbx_lookup_type): Memory leak.

	* event-loop.c (delete_async_signal_handler): Move pointer null
	test to before pointer dereference.

	* ui-out.c (append_header_to_list): Possible cut and paste error.

	* MAINTAINERS: white space tweak.

2007-08-17  Michael Snyder  <msnyder@access-company.com>

	* stack.c (print_frame): Memory leak.

	* completer.c (filename_completer): Avoid memory leak.
	Remove unnecessary nested block.

	* c-exp.y (parse_number): Memory leak.

	* completer.c (location_completer): Must free 'fn_list', except 
	in the one case where it is returned (as 'list').

	* varobj.c (value_of_root): Memory leak.

	* gdbtypes.h (virtual_base_list): Remove export decl.
	* gdbtypes.c (virtual_base_list): Make static.  Not called outside.
	(virtual_base_index): Memory leak.
	(virtual_base_index_skip_primaries): Ditto.

2007-08-17  Maxim Grigoriev  <maxim2405@gmail.com>

	* xtensa-tdep.c (ARG_NOF, ARG_1ST, PS_WOE, PS_EXC, C0_MAXOPDS)
	(C0_NREGS, C0_CLESV, C0_SP, C0_FP, C0_RA, C0_ARGS, C0_NARGS)
	(C0_CONST, C0_INEXP, C0_NOSTK): New macros.
	(xtensa_read_register): New function.
	(xtensa_windowed_frame_cache, xtensa_call0_frame_cache, xtensa_c0reg)
	(xtensa_insn_kind): New types.